syntax = "proto3";

option go_package = "github.com/rtdavis22/queueit/idl";

message QueueConfig {
  uint64 id = 1;
  string name = 2;
}

message QueueConfigRequest {
  string domain = 1;
}

message QueueConfigResponse {
  repeated QueueConfig configs = 1;
}

message TweetQueueItem {
  uint64 id = 1;
  string tweet_url = 2;
}

message GetTweetQueueItemsRequest {
  uint64 queue_id = 1;
}

message GetTweetQueueItemsResponse {
  repeated TweetQueueItem items = 1;
}

message CreateTweetQueueItemRequest {
  uint64 queue_id = 1;
  string tweet_url = 2;
}

message CreateTweetQueueItemResponse {

}

service QueueIt {
  rpc GetQueueConfigs(QueueConfigRequest) returns (QueueConfigResponse);
  rpc GetTweetQueueItems(GetTweetQueueItemsRequest) returns (GetTweetQueueItemsResponse);
  rpc CreateTweetQueueItem(CreateTweetQueueItemRequest) returns (CreateTweetQueueItemResponse);
}
